--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         }
     ],
     "require": {
-        "icicleio/icicle": "^0.9"
+        "icicleio/icicle": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Icicle\\Cache\\": "src"
