--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,14 @@
         "icicleio/icicle": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^5.0"
     },
     "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Icicle\\Cache\\": "src"
